# ultra-low-latency-hft-engine

./: .gitignore  Architecture.md  CMakeLists.txt  Component.md  LICENSE  README.md  export_model.py  itch_parser.cpp  itch_parser.h  main.cpp  network_ingress.cpp  network_ingress.h  order_execution.cpp  order_execution.h  strategy_engine.cpp  strategy_engine.h  telemetry.cpp  telemetry.h  tensorrt_engine.cpp  tensorrt_engine.h
tests/: CMakeLists.txt  test_itch_parser.cpp
tests/mock_dpdk/: rte_byteorder.h  rte_memory.h
